src/grammar.bnf
<program>     ::= ( <func_def> | <expression> <NEWLINE>* )* ;
<func_def>    ::= "func" <IDENTIFIER> "(" <params>? ")" "->" <type>
                  "{" <NEWLINE>* <expression>* <NEWLINE>* "}" ;
<params>      ::= <param> ( "," <param> )* ;
<param>       ::= <IDENTIFIER> ":" <type> ;
<type>        ::= "num" | "bool" ;
<expression>  ::= <assignment> ;
<assignment>  ::= <IDENTIFIER> "=" <assignment> | <logical_or> ;
<logical_or>  ::= <logical_and> ( "||" <logical_and> )* ;
<logical_and> ::= <equality> ( "&&" <equality> )* ;
<equality>    ::= <comparison> ( ( "==" | "!=" ) <comparison> )* ;
<comparison>  ::= <term> ( ( ">" | ">=" | "<" | "<=" ) <term> )* ;
<term>        ::= <factor> ( ( "+" | "-" ) <factor> )* ;
<factor>      ::= <unary> ( ( "*" | "/" ) <unary> )* ;
<unary>       ::= ( "-" | "+" | "!" ) <unary> | <primary> ;
<primary>     ::= <NUMBER> | <IDENTIFIER> | "true" | "false"
                | "(" <expression> ")"
                | <if_expr>
                | <while_expr>
                | <print_expr>
                | <let_expr>
                | <call_expr> ;
<let_expr>    ::= "let" <IDENTIFIER> ":" <type> "=" <expression> ;
<print_expr>  ::= "print" <expression> ;
<call_expr>   ::= <IDENTIFIER> "(" <args>? ")" ;
<args>        ::= <expression> ( "," <expression> )* ;
<if_expr>     ::= "if" <expression> "{" <NEWLINE>* <expression> <NEWLINE>* "}"
                  ( "else" "{" <NEWLINE>* <expression> <NEWLINE>* "}" )? ;
<while_expr>  ::= "while" <expression> "{" ( <NEWLINE>* <expression> )* <NEWLINE>* "}" ;
